--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "v1",
     "ethers": "^5.7.0",
-    "next": "12.2.5",
+    "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.6.4"
+    "react-icons": "^4.4.0",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5",
+    "autoprefixer": "^10.4.9",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
