--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-spinners": "^0.13.4",
     "web3modal": "^1.9.9"
   },
   "devDependencies": {
